update log aggregator name

--- a/charts/rancher-logging/0.1.2/charts/log-aggregator/charts/log-aggregator-linux/templates/log-aggregator.yaml
+++ b/charts/rancher-logging/0.1.2/charts/log-aggregator/charts/log-aggregator-linux/templates/log-aggregator.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
-  name: {{ template "log-aggregator.fullname" . }}
+  name: {{ template "log-aggregator.fullname" . }}-linux
   labels:
     app: {{ template "log-aggregator.name" . }}
     chart: {{ template "log-aggregator.version" . }}
