--- a/charts/rancher-logging/0.1.2/charts/fluentd-windows/values.yaml
+++ b/charts/rancher-logging/0.1.2/charts/fluentd-windows/values.yaml
@@ -1,8 +1,8 @@
 labels: {}
 
 image:
-  repository: rancher/fluentd
-  tag: v0.1.13
+  repository: micheliac/fluentd
+  tag: dev-windows-1809
   pullPolicy: IfNotPresent
 
 resources: {}
@@ -14,7 +14,8 @@ resources: {}
   #   memory: 200Mi
 # env:
 
-command: '["fluentd", "-c", "/fluentd/etc/config/entry/fluent.conf"]'
+command: '["powershell", "-command",  "fluentd", "-vv", "-c", "/fluentd/etc/config/entry/fluent.conf"]'
+# command: '["powershell", "-command", "fluentd", "-vv"]'
 
 livenessProbe:
   enabled: true
@@ -24,23 +25,17 @@ annotations: {}
 # updateStrategy:
 #   type: RollingUpdate
 
+nameOverride: fluentd
 tolerations:
   - effect: NoSchedule
     operator: Exists
 
 
-nodeSelector: 
-  beta.kubernetes.io/os: linux
-
-service:
-  type: ClusterIP
-  ports:
-    - name: metric
-      port: 24231
-      targetPort: metric
+nodeSelector:
+  beta.kubernetes.io/os: windows
 
 cluster:
-  dockerRoot: /var/lib/docker
+  dockerRoot: C:\ProgramData\docker
 
 service:
   ports:
@@ -49,9 +44,9 @@ service:
       targetPort: metric
 
 configmapReload:
-  name: reloader
+  name: windows-reloader
   image:
-    repository: rancher/jimmidyson-configmap-reload
+    repository: micheliac/configmap-reload
     tag: v0.2.2
     pullPolicy: IfNotPresent
   resources: {}
