--- a/charts/rancher-logging/0.1.2/charts/log-aggregator-windows/templates/log-aggregator.windows.yaml
+++ b/charts/rancher-logging/0.1.2/charts/log-aggregator-windows/templates/log-aggregator.windows.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
-  name: {{ template "log-aggregator.fullname" . }}-linux
+  name: {{ template "log-aggregator.fullname" . }}
   labels:
     app: {{ template "log-aggregator.name" . }}
     chart: {{ template "log-aggregator.version" . }}
@@ -27,7 +27,6 @@ spec:
         chart: {{ template "log-aggregator.version" . }}
         release: {{ .Release.Name }}
     spec:
-      # serviceAccountName: {{ template "log-aggregator.fullname" . }}
       containers:
       - name: log-aggregator
         image: {{ template "system_default_registry" . }}{{ .Values.image.repository }}:{{ .Values.image.tag }}
