--- a/charts/rancher-logging/0.1.2/charts/fluentd/values.yaml
+++ b/charts/rancher-logging/0.1.2/charts/fluentd/values.yaml
@@ -1,20 +1,4 @@
-labels: {}
-
-image:
-  repository: rancher/fluentd
-  tag: v0.1.13
-  pullPolicy: IfNotPresent
-
-resources: {}
-  # limits:
-  #   cpu: 100m
-  #   memory: 500Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 200Mi
-# env:
-
-command: '["fluentd", "-c", "/fluentd/etc/config/entry/fluent.conf"]'
+nameOverride: fluentd
 
 rbac:
   create: true
@@ -22,38 +6,12 @@ rbac:
 serviceAccount:
   create: true
 
-livenessProbe:
-  enabled: true
-
-annotations: {}
-
-# updateStrategy:
-#   type: RollingUpdate
-
-tolerations:
-  - effect: NoSchedule
-    operator: Exists
-
-
-nodeSelector: {}
-
 service:
   type: ClusterIP
   ports:
     - name: metric
       port: 24231
       targetPort: metric
-
-cluster:
-  dockerRoot: /var/lib/docker
-
-configmapReload:
-  name: reloader
-  image:
-    repository: rancher/jimmidyson-configmap-reload
-    tag: v0.2.2
-    pullPolicy: IfNotPresent
-  resources: {}
 
 secrets:
   entry:
