Update logging chart to support both windows and linux
Changes:
1. fluentd: add sub charts fluentd-linux and fluentd-:windows
2. log-aggregator: remove useless service account
3. log-aggregator: add sub charts log-aggregator-linux and
log-aggregator-windows

--- a/charts/rancher-logging/0.1.2/charts/fluentd-tester/templates/deployment.yaml
+++ b/charts/rancher-logging/0.1.2/charts/fluentd-tester/templates/deployment.yaml
@@ -69,8 +69,13 @@ spec:
 {{- if .Values.extraVolumes }}
 {{ toYaml .Values.extraVolumes | indent 6 }}
 {{- end }}
-{{- if .Values.nodeSelector }}
       nodeSelector:
+{{- if semverCompare "<1.14-0" .Capabilities.KubeVersion.GitVersion }}
+        beta.kubernetes.io/os: linux
+{{- else}}
+        kubernetes.io/os: linux
+{{- end}}
+{{- if .Values.nodeSelector }}
 {{ toYaml .Values.nodeSelector | indent 8 }}
 {{- end }}
 {{- if .Values.tolerations }}
