--- a/charts/rancher-logging/0.1.2/charts/log-aggregator/charts/log-aggregator-linux/templates/daemonset.yaml
+++ b/charts/rancher-logging/0.1.2/charts/log-aggregator/charts/log-aggregator-linux/templates/daemonset.yaml
@@ -1,7 +1,7 @@
-apiVersion: extensions/v1beta1
+apiVersion: {{ template "daemonset_api_version" . }}
 kind: DaemonSet
 metadata:
-  name: {{ template "log-aggregator.fullname" . }}
+  name: {{ template "log-aggregator.fullname" . }}-linux
   labels:
     app: {{ template "log-aggregator.name" . }}
     chart: {{ template "log-aggregator.version" . }}
@@ -27,7 +27,6 @@ spec:
         chart: {{ template "log-aggregator.version" . }}
         release: {{ .Release.Name }}
     spec:
-      serviceAccountName: {{ template "log-aggregator.fullname" . }}
       containers:
       - name: log-aggregator
         image: {{ template "system_default_registry" . }}{{ .Values.image.repository }}:{{ .Values.image.tag }}
@@ -44,8 +43,13 @@ spec:
         resources:
 {{ toYaml .Values.resources | indent 10 }}
       terminationGracePeriodSeconds: 10
-    {{- if .Values.nodeSelector }}
       nodeSelector:
+{{- if semverCompare "<1.14-0" .Capabilities.KubeVersion.GitVersion }}
+        beta.kubernetes.io/os: linux
+{{- else}}
+        kubernetes.io/os: linux
+{{- end}}
+    {{- if .Values.nodeSelector }}
 {{ toYaml .Values.nodeSelector | indent 8 }}
     {{- end }}
       tolerations:
