--- a/charts/rancher-logging/0.1.2/charts/fluentd/charts/fluentd-linux/values.yaml
+++ b/charts/rancher-logging/0.1.2/charts/fluentd/charts/fluentd-linux/values.yaml
@@ -2,8 +2,8 @@ nameOverride: fluentd
 labels: {}
 
 image:
-  repository: rancher/fluentd
-  tag: v0.1.13
+  repository: micheliac/fluentd
+  tag: '5508096'
   pullPolicy: IfNotPresent
 
 resources: {}
