update config-reload cpu/memory limit

--- a/charts/rancher-monitoring/v0.1.5002/charts/operator/templates/deployment.yaml
+++ b/charts/rancher-monitoring/v0.1.5002/charts/operator/templates/deployment.yaml
@@ -47,6 +47,8 @@ spec:
             - --log-level={{ .Values.logLevel }}
             - --prometheus-config-reloader={{ template "system_default_registry" . }}{{ .Values.image.prometheusConfigReloader.repository }}:{{ .Values.image.prometheusConfigReloader.tag }}
             - --config-reloader-image={{ template "system_default_registry" . }}{{ .Values.image.configmapReload.repository }}:{{ .Values.image.configmapReload.tag }}
+            - --config-reloader-cpu={{ .Values.resources.prometheusConfigReloader.limits.cpu }}
+            - --config-reloader-memory={{ .Values.resources.prometheusConfigReloader.limits.memory }}
             - --labels={{ .Values.apiGroup }}=true
             - --manage-crds={{ .Values.manageCRDs }}
             - --with-validation={{ .Values.withValidation }}
