--- a/charts/rancher-monitoring/v0.1.5002/values.yaml
+++ b/charts/rancher-monitoring/v0.1.5002/values.yaml
@@ -18,6 +18,10 @@ operator:
     requests:
       cpu: 100m
       memory: 50Mi
+    prometheusConfigReloader:
+      limits:
+        cpu: 100m
+        memory: 50Mi
   nodeSelectors: []
   tolerations: []
   logFormat: "logfmt"
